# ESL201000168

./: .gitignore  README.md
0_DELIVERABLES_READY/Assignment_14/: PWMController.vhd  QuadratureEncoder.vhd  esl_demonstrator.vhd  tb_esl_demonstrator.vhd
0_DELIVERABLES_READY/Assignment_3/: QuadratureEncoder rev1.vhd  QuadratureEncoder rev3.vhd  esl_demonstrator.vhd
0_DELIVERABLES_READY/Assignment_6/: esl_demonstrator.vhd
0_DELIVERABLES_READY/Assignment_7/: view_yuv.sh
0_DELIVERABLES_READY/Assignment_8/: main.c
0_DELIVERABLES_READY/computervision/: CMakeLists.txt  compile.sh  lightFinder.cpp  pi_lightfinder.cpp  readme.txt  serialCommunication.cpp
Assignment_11/Eclipse/: EulerAngles.c  Makefile  Panmodel.c  Pansubmod.c  Pansubmod.h  Tiltmain.c  Tiltsubmod.c  assignment_11.elf  (+3 more)
Assignment_11_rpi/: 20sim-pi  CMakeLists.txt  Pansubmod.c  Tiltmodel.h  compile.sh  main.c
Assignment_14_final/: homing.vhd
Assignment_14_final/raspberry-pi/: CMakeLists.txt  compile.sh  pi_lightfinder.cpp
Assignment_3/: QuadratureEncoder rev2.vhd  QuadratureEncoder rev3.vhd  QuadratureEncoder.vhd  esl_demonstrator.vhd  tb_esl_demonstrator.vhd
Assignment_6/: tb_esl_demonstrator.vhd
Assignment_7/: compile.sh  file.yuv  main.c  yuv_pipeline
Assignment_8/: compile.sh  main.c  yuv_pipeline
Assignment_9/: setup_control.qsf
Assignment_9_UART/: raspberry_serial.c
Computer vision/: lightFinder.cpp  serialCommunication.cpp
Modelsim/: QuadratureEncoder.vhd  esl_demonstrator.vhd  modelsim-simulations.cr.mti  modelsim-simulations.mpf  tb_esl_demonstrator.vhd  vsim.wlf
(+1816 files in other folders)
